// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Liquid Basic 1`] = `
"<div class=\\"test div\\">
  <input />

  Hello! I can run in React, Vue, Solid, or Liquid!
</div>
<style>
  .div {
    padding: 10px;
  }
</style>
"
`;

exports[`Liquid Basic Context 1`] = `
"<div>
  Hello! I can run in React, Vue, Solid, or Liquid!

  <input />
</div>
"
`;

exports[`Liquid Basic OnMount Update 1`] = `
"<div>Hello {{name}}</div>
"
`;

exports[`Liquid Basic Outputs 1`] = `
"<div></div>
"
`;

exports[`Liquid Basic Outputs Meta 1`] = `
"<div></div>
"
`;

exports[`Liquid BasicChildComponent 1`] = `
"<div>
  <MyBasicComponent id=\\"{{dev}}\\"></MyBasicComponent>

  <div>
    <MyBasicOnMountUpdateComponent
      hi=\\"{{name}}\\"
      bye=\\"{{dev}}\\"
    ></MyBasicOnMountUpdateComponent>
  </div>
</div>
"
`;

exports[`Liquid BasicFor 1`] = `
"<div>
  {% for person in names %}
  <div>
    <input value=\\"{{name}}\\" />

    Hello {{person}} ! I can run in Qwik, Web Component, React, Vue, Solid, or
    Liquid!
  </div>
  {% endfor %}
</div>
"
`;

exports[`Liquid BasicRef 1`] = `
"<div>
  {% if showInput %}
  <div>
    <input class=\\"input\\" value=\\"{{name}}\\" />

    <label for=\\"cars\\">Choose a car:</label>

    <select name=\\"cars\\" id=\\"cars\\">
      <option value=\\"supra\\">GR Supra</option>

      <option value=\\"86\\">GR 86</option>
    </select>
  </div>
  {% endif %} Hello ! I can run in React, Qwik, Vue, Solid, or Web Component!
</div>
<style>
  .input {
    color: red;
  }
</style>
"
`;

exports[`Liquid BasicRefAssignment 1`] = `
"<div>
  <button>Click</button>
</div>
"
`;

exports[`Liquid BasicRefPrevious 1`] = `
"<div>
  <h1>Now: {{count}} , before: {{prevCount}}</h1>

  <button>Increment</button>
</div>
"
`;

exports[`Liquid Button 1`] = `
"<div>
  {% if link %}

  <a href=\\"{{link}}\\">{{text}}</a>

  {% endif %}
</div>
"
`;

exports[`Liquid Columns 1`] = `
"<div class=\\"builder-columns div\\">
  {% for column in columns %}
  <div class=\\"builder-column div-2\\">{{column.content}} {{index}}</div>
  {% endfor %}
</div>
<style>
  .div {
    display: flex;
    flex-direction: column;
    align-items: stretch;
    line-height: normal;
  }
  @media (max-width: 999px) {
    .div {
      flex-direction: row;
    }
  }
  @media (max-width: 639px) {
    .div {
      flex-direction: row-reverse;
    }
  }
  .div-2 {
    flex-grow: 1;
  }
</style>
"
`;

exports[`Liquid ContentSlotHtml 1`] = `
"<div>
  <slot name=\\"{{slotTesting}}\\"></slot>

  <div>
    <hr />
  </div>

  <div>
    <slot></slot>
  </div>
</div>
"
`;

exports[`Liquid ContentSlotJSX 1`] = `
"<div>
  {{slotTesting}}

  <div>
    <hr />
  </div>

  <div>{{children}}</div>
</div>
"
`;

exports[`Liquid CustomCode 1`] = `
"<div innerHTML=\\"{{code}}\\"></div>
"
`;

exports[`Liquid Embed 1`] = `
"<div innerHTML=\\"{{code}}\\"></div>
"
`;

exports[`Liquid Form 1`] = `
"<form validate=\\"{{validate}}\\" method=\\"{{method}}\\" name=\\"{{name}}\\"></form>
<style>
  .pre {
    padding: 10px;
    color: red;
    text-align: center;
  }
</style>
"
`;

exports[`Liquid Image 1`] = `
"<div>
  <picture>
    <source srcset=\\"{{srcset}}\\" />
  </picture>

  {{children}}
</div>
<style>
  .img {
    opacity: 1;
    transition: opacity 0.2s ease-in-out;
    object-fit: cover;
    object-position: center;
  }
</style>
"
`;

exports[`Liquid Image State 1`] = `
"<div>
  {% for item in images %}
  <div>
    <img src=\\"{{item}}\\" key=\\"{{itemIndex}}\\" />
  </div>
  {% endfor %}
</div>
"
`;

exports[`Liquid Img 1`] = `
"<img alt=\\"{{altText}}\\" src=\\"{{imgSrc}}\\" />
"
`;

exports[`Liquid Input 1`] = `
"<input
  placeholder=\\"{{placeholder}}\\"
  type=\\"{{type}}\\"
  name=\\"{{name}}\\"
  value=\\"{{value}}\\"
  defaultValue=\\"{{defaultValue}}\\"
  required=\\"{{required}}\\"
/>
"
`;

exports[`Liquid RawText 1`] = `
"<span></span>
"
`;

exports[`Liquid Remove Internal mitosis package 1`] = `
"<div>Hello {{name}} ! I can run in React, Qwik, Vue, Solid, or Liquid!</div>
"
`;

exports[`Liquid Section 1`] = `
"<section>{{children}}</section>
"
`;

exports[`Liquid Select 1`] = `
"<select value=\\"{{value}}\\" defaultValue=\\"{{defaultValue}}\\" name=\\"{{name}}\\">
  {% for option in options %}
  <option value=\\"{{option.value}}\\" data-index=\\"{{index}}\\"></option>
  {% endfor %}
</select>
"
`;

exports[`Liquid SlotHtml 1`] = `
"<div>
  <ContentSlotCode>
    <slot></slot>
  </ContentSlotCode>
</div>
"
`;

exports[`Liquid SlotJsx 1`] = `
"<div>
  <ContentSlotCode></ContentSlotCode>
</div>
"
`;

exports[`Liquid Stamped.io 1`] = `
"<div data-user=\\"{{name}}\\">
  <button>Write a review</button>

  {% if showReviewPrompt %}

  <input placeholder=\\"Email\\" />

  <input placeholder=\\"Title\\" class=\\"input\\" />

  <textarea placeholder=\\"How was your experience?\\" class=\\"textarea\\"></textarea>

  <button class=\\"button\\">Submit</button>

  {% endif %} {% for review in reviews %}
  <div class=\\"review\\" key=\\"{{review.id}}\\">
    <img class=\\"img\\" src=\\"{{review.avatar}}\\" />

    <div>
      <div>N: {{index}}</div>

      <div>{{review.author}}</div>

      <div>{{review.reviewMessage}}</div>
    </div>
  </div>
  {% endfor %}
</div>
<style>
  .input {
    display: block;
  }
  .textarea {
    display: block;
  }
  .button {
    display: block;
  }
  .review {
    margin: 10px;
    padding: 10px;
    background: white;
    display: flex;
    border-radius: 5px;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
  }
  .img {
    height: 30px;
    width: 30px;
    margin-right: 10px;
  }
</style>
"
`;

exports[`Liquid Submit 1`] = `
"<button type=\\"submit\\">{{text}}</button>
"
`;

exports[`Liquid Text 1`] = `
"<div></div>
"
`;

exports[`Liquid Textarea 1`] = `
"<textarea
  placeholder=\\"{{placeholder}}\\"
  name=\\"{{name}}\\"
  value=\\"{{value}}\\"
  defaultValue=\\"{{defaultValue}}\\"
></textarea>
"
`;

exports[`Liquid Video 1`] = `
"<video
  preload=\\"none\\"
  poster=\\"{{posterImage}}\\"
  autoplay=\\"{{autoPlay}}\\"
  muted=\\"{{muted}}\\"
  controls=\\"{{controls}}\\"
  loop=\\"{{loop}}\\"
></video>
"
`;

exports[`Liquid basicForwardRef 1`] = `
"<div>
  <input class=\\"input\\" value=\\"{{name}}\\" />
</div>
<style>
  .input {
    color: red;
  }
</style>
"
`;

exports[`Liquid basicForwardRefMetadata 1`] = `
"<div>
  <input class=\\"input\\" value=\\"{{name}}\\" />
</div>
<style>
  .input {
    color: red;
  }
</style>
"
`;

exports[`Liquid class + ClassName + css 1`] = `
"<div class=\\"test2 test div\\">
  Hello! I can run in React, Vue, Solid, or Liquid!
</div>
<style>
  .div {
    padding: 10px;
  }
</style>
"
`;

exports[`Liquid class + css 1`] = `
"<div class=\\"test div\\">Hello! I can run in React, Vue, Solid, or Liquid!</div>
<style>
  .div {
    padding: 10px;
  }
</style>
"
`;

exports[`Liquid className + css 1`] = `
"<div class=\\"test div\\">Hello! I can run in React, Vue, Solid, or Liquid!</div>
<style>
  .div {
    padding: 10px;
  }
</style>
"
`;

exports[`Liquid className 1`] = `
"<div>
  <div class=\\"no binding\\">Without Binding</div>

  <div class=\\"{{bindings}}\\">With binding</div>
</div>
"
`;

exports[`Liquid multipleOnUpdate 1`] = `
"<div></div>
"
`;

exports[`Liquid multipleOnUpdateWithDeps 1`] = `
"<div></div>
"
`;

exports[`Liquid nestedShow 1`] = `
"{% if conditionA %} {% endif %}
"
`;

exports[`Liquid onInit & onMount 1`] = `
"<div></div>
"
`;

exports[`Liquid onInit 1`] = `
"<div>Default name defined by parent {{name}}</div>
"
`;

exports[`Liquid onMount 1`] = `
"<div></div>
"
`;

exports[`Liquid onUpdate 1`] = `
"<div></div>
"
`;

exports[`Liquid onUpdateWithDeps 1`] = `
"<div></div>
"
`;

exports[`Liquid preserveExportOrLocalStatement 1`] = `
"<div></div>
"
`;

exports[`Liquid preserveTyping 1`] = `
"<div>Hello! I can run in React, Vue, Solid, or Liquid! {{name}}</div>
"
`;

exports[`Liquid propsDestructure 1`] = `
"<div>
  {{children}} {{type}} Hello! I can run in React, Vue, Solid, or Liquid!
</div>
"
`;

exports[`Liquid propsInterface 1`] = `
"<div>Hello! I can run in React, Vue, Solid, or Liquid! {{name}}</div>
"
`;

exports[`Liquid propsType 1`] = `
"<div>Hello! I can run in React, Vue, Solid, or Liquid! {{name}}</div>
"
`;

exports[`Liquid rootShow 1`] = `""`;

exports[`Liquid self-referencing component 1`] = `
"<div>{{name}}</div>
"
`;

exports[`Liquid self-referencing component with children 1`] = `
"<div>{{name}} {{children}}</div>
"
`;

exports[`Liquid showWithFor 1`] = `
"{% if conditionA %} {% for item in items %}
<div key=\\"{{idx}}\\">{{item}}</div>
{% endfor %} {% endif %}
"
`;
